--- a/index.html
+++ b/index.html
@@ -346,6 +346,18 @@
             </div>
         </div>
     </div>
+    <div class="mainBottom">
+        <div class="secondBottom">
+            <div class="bottom1">
+                <img src="img/16.png" alt="">
+                <img src="img/17.png" alt="">
+                <img src="img/18.png" alt="">
+                <img src="img/19.png" alt="">
+                <img src="img/20.png" alt="">
+            </div>
+            <p>Template designed by : Templates Jungle</p>
+        </div>
+    </div>
 
 
 </body>
